Update README files to show custom dice config option

--- a/README
+++ b/README
@@ -20,4 +20,8 @@ Python Script for Tossing the Dice
 * `make rollcustomgroup GROUP=3-custom X=1 Y=99` or `make rollcustomgroup GROUP=4,6,custom X=1 Y=99`
 
 ## Usage as PIP installed Library
-* Use [Sample Script](sample.py)
+* Use (Sample Script)[sample.py]
+
+## Custom Dice Types
+* Make a copy of (Example Config)[config.example.json]
+* Load with the -c argument, use -z to override the default dice types
